user can upload profile data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#Database configuration
 spring.datasource.url=${DATABASE_URL:jdbc:mysql://localhost:3306/vomzer_socials?createDatabaseIfNotExist=true}
 spring.datasource.username=${DATABASE_USERNAME:root}
 spring.datasource.password=${DATABASE_PASS}
@@ -18,4 +19,5 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 
-JWT-SECRET=${JWT_SECRET_KEY}
+#JWT Configuration
+jwt.secret= ${JWT_SECRET_KEY}
