Udated and integrated signup and login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,41 @@
-#Database configuration
-spring.datasource.url=${DATABASE_URL:jdbc:mysql://localhost:3306/vomzer_socials?createDatabaseIfNotExist=true}
+# Application Basics
+spring.application.name=pigin_refactored
+server.port=${PORT}
+
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/pigin_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=utf8
 spring.datasource.username=${DATABASE_USERNAME:root}
 spring.datasource.password=${DATABASE_PASS}
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.main.allow-circular-references=true
+spring.main.allow-bean-definition-overriding=true
+
+
+# JWT Configuration
+jwt.secret=${JWT_SECRET_KEY}
+jwt.expiration-ms= 36000000
+jwt.refresh-expiration-ms=86400000
+
+# Walrus Configuration
+walrus.epochs = ${walrus.epochs}
+walrus.address = ${walrus.address}
+walrus.upload.url = ${walrus.upload.url}
+walrus.download.url = ${walrus.download.url}
+
+
+# Misc
+logging.level.org.springframework.web.client.RestTemplate=DEBUG
+logging.level.com.fasterxml.jackson=DEBUG
 spring.config.import=optional:secrets.properties
+cookie.secure=false
 
+#Cors origin config
+#cors.allowed-origins=http://localhost:5173,http://localhost:5174,https://your-frontend.onrender.com
 
-#mail config
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=your_email@gmail.com
-spring.mail.password=your_app_password
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-
-
-#JWT Configuration
-jwt.secret= ${JWT_SECRET_KEY}
+#health monitor
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=always
