--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -5,3 +5,11 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+# Test-specific environment variables to avoid missing env var errors
+server.port=8080
+jwt.secret=test-secret-key-for-testing-purposes-only
+walrus.epochs=10
+walrus.address=http://localhost:9000
+walrus.upload.url=http://localhost:9000/upload
+walrus.download.url=http://localhost:9000/download
